# coro

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  Buffer.cpp  Buffer.h  CMakeLists.txt  Common.h  Coro.cpp  Coro.h  Coro.sln  CoroMutex.cpp  CoroMutex.h  CoroPool.cpp  CoroPool.h  CoroQueue.h  CoroUtils.cpp  CoroUtils.h  HttpParsers.h  NetworkIterator.cpp  NetworkIterator.h  README.md  TcpServer.cpp  TcpServer.h  TcpSocket.cpp  TcpSocket.h  ThreadPool.cpp  ThreadPool.h  circle.yml  format.h
Coro/: Acceptor.h  Application.cpp  AsioTask.h  CMakeLists.txt  CheckPoint.cpp  Coro.cpp  Coro.h  CoroPool.cpp  DatagramSocket.h  FiberLinux.cpp  FiberWindows.cpp  IoService.cpp  Mutex.cpp  Mutex.h  Queue.h  SignalSet.cpp  Strand.cpp  Strand.h  StrandPool.cpp  StrandPool.h  Stream.h  Timeout.h  Work.h
CoroTest/: CMakeLists.txt  TestCoro.cpp  TestMutex.cpp  TestQueue.cpp  TestResolver.cpp  TestTcp.cpp  TestUdp.cpp  main.cpp
Src/: CMakeLists.txt
Src/Coro/: Acceptor.cpp  Acceptor.h  Application.cpp  Application.h  AsioTask.h  CMakeLists.txt  Coro.cpp  Coro.h  Coro.vcxproj  Coro.vcxproj.filters  CoroPool.cpp  CoroPool.h  DatagramSocket.h  Fiber.cpp  Fiber.h  FiberWindows.cpp  IoService.cpp  IoService.h  Mutex.cpp  Queue.h  Resolver.h  SignalSet.h  StrandPool.cpp  Stream.h  StreamSocket.h  TcpSocket.cpp  TcpSocket.h  Timeout.h  Timer.h  UdpSocket.cpp  UdpSocket.h  WindowsObjectHandle.h
Src/CoroTest/: CMakeLists.txt  CoroTest.vcxproj  CoroTest.vcxproj.filters  TestCoro.cpp  TestCoroPool.cpp  TestQueue.cpp  TestStrandPool.cpp  TestTcp.cpp  TestTimeout.cpp  TestUdp.cpp  main.cpp
Src/Utils/: Finally.h
check/: CMakeLists.txt  TestBuffer.cpp  TestCoroPool.cpp  TestCoroQueue.cpp  TestNetwork.cpp  TestNetworkIterator.cpp  TestTcp.cpp  TestThreadPool.cpp  main.cpp
coro/: Acceptor.cpp  Acceptor.h  Application.cpp  AsioTask.h  Buffer.cpp  Buffer.h  BufferHelpers.h  CMakeLists.txt  CheckPoint.cpp  Coro.cpp  Coro.h  CoroPool.cpp  CoroPool.h  DatagramSocket.h  HttpParsers.h  IoService.cpp  Mutex.h  ObjectFactory.h  Queue.h  Resolver.h  SignalSet.h  Stream.h  StreamIterator.h  StreamSocket.h  TcpServer.cpp  TcpSocket.h  ThreadLocal.h  Timeout.cpp  Timeout.h  Timer.h  UdpServer.cpp  UdpServer.h  UdpSocket.cpp  UdpSocket.h  UnixSocket.cpp  UnixSocket.h  WsPayloadLength.h  WsProtocol.cpp  WsProtocol.h
coro_extra/: Buffer.cpp  Buffer.h  BufferHelpers.h  CMakeLists.txt  FcgiClient.cpp  FcgiClient.h  Format.h  HttpParsers.h  HttpProtocol.h  StreamIterator.h  TcpServer.cpp  TcpServer.h  TcpSocket.cpp  TcpSocket.h  UdpServer.cpp  UdpServer.h  UdpSocket.cpp  UdpSocket.h  UnixSocket.cpp  UnixSocket.h  WsPayloadLength.h  WsProtocol.cpp  WsProtocol.h  base64.cpp  base64.h
coro_extra_test/: CMakeLists.txt  TestFcgi.cpp  TestHttpProtocol.cpp  TestWsProtocol.cpp  client.html  main.cpp
coro_test/: CMakeLists.txt  TestCoro.cpp  TestCoroPool.cpp  TestStrandPool.cpp  TestTcp.cpp  TestTimeout.cpp  TestUdp.cpp
examples/stress/: CMakeLists.txt  client.cpp  server.cpp
examples/stress_client/: CMakeLists.txt  main.cpp
examples/stress_server/: CMakeLists.txt  main.cpp
examples/ws_echo_server/: CMakeLists.txt  client.html  main.cpp
include/: AsioTask.h  BlockingBufferPool.h  Buffer.h  BufferHelpers.h  Common.h  Coro.h  CoroMain.h  CoroMutex.h  CoroPool.h  CoroQueue.h  CoroUtils.h  CoroValue.h  DynamicMemoryPool.h  File.h  Finally.h  FixedSizedMemoryPool.h  Format.h  IoHandle.h  IoHandleIterator.h  IoService.h  Logging.h  Malloc.h  MultibyteInteger.h  Mutex.h  NetworkIterator.h  NonBlockingBufferPool.h  ObjectPool.h  Queue.h  Resolver.h  SignalSet.h  Stream.h  StreamIterator.h  Task.h  TcpServer.h  TcpSocket.h  ThreadPool.h  Timeout.h  Timer.h  Tun.h  UdpServer.h  (+5 more)
src/: BlockingBufferPool.cpp  Buffer.cpp  BufferHelpers.cpp  Coro.cpp  CoroMain.cpp  CoroMutex.cpp  CoroPool.cpp  DynamicMemoryPool.cpp  File.cpp  FixedSizedMemoryPool.cpp  IoService.cpp  Logging.cpp  MultibyteInteger.cpp  Mutex.cpp  NetworkIterator.cpp  NonBlockingBufferPool.cpp  SignalSet.cpp  Task.cpp  TcpServer.cpp  TcpSocket.cpp  ThreadPool.cpp  Timeout.cpp  Tun.cpp  UdpServer.cpp  UdpSocket.cpp  UnixSocket.cpp  WsPayloadLength.cpp  WsProtocol.cpp
test_coro/: CMakeLists.txt  TestCoro.cpp  main.cpp
tests/: CMakeLists.txt  TestBuffer.cpp  TestBufferHelpers.cpp  TestCoro.cpp  TestCoroPool.cpp  TestExperiments.cpp  TestMutex.cpp  TestObjectFactory.cpp  TestObjectPool.cpp  TestQueue.cpp  TestResolver.cpp  TestStreamIterator.cpp  TestTcp.cpp  TestTcpIterator.cpp  TestTimeout.cpp  TestUdp.cpp  TestWsPayloadLength.cpp  TestWsProtocol.cpp  main.cpp
tests/just_coro/: CMakeLists.txt  TestCoro.cpp  main.cpp
tests/multi_thread/: CMakeLists.txt  TestCoroMutex.cpp  TestCoroPool.cpp  TestCoroQueue.cpp  TestTcp.cpp  TestTimeout.cpp  main.cpp
tests/single_thread/: CMakeLists.txt  TestBuffer.cpp  TestBufferPool.cpp  TestCoro.cpp  TestCoroMutex.cpp  TestCoroPool.cpp  TestCoroQueue.cpp  TestCoroUtils.cpp  TestCoroValue.cpp  TestMalloc.cpp  TestMemoryPool.cpp  TestMultibyteInteger.cpp  TestNetworkIterator.cpp  TestQueue.cpp  TestTcp.cpp  TestTcpIterator.cpp  TestTimeout.cpp  TestUdp.cpp  TestWsPayloadLength.cpp  TestWsProtocol.cpp  main.cpp
